--- a/examples/src/style.css
+++ b/examples/src/style.css
@@ -19,3 +19,14 @@ button {
 button:hover {
   background: rgb(90, 120, 30);
 }
+
+button:disabled {
+  opacity: 0.7;
+  pointer-events: none;
+}
+
+input {
+  padding: 9px 20px;
+  font-size: 14px;
+  border: 1px solid #ccc;
+}
